--- a/public/assets/site/css/styles.css
+++ b/public/assets/site/css/styles.css
@@ -206,9 +206,15 @@ img {
     align-items: center;
 }
 
+.nav__logo img{
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+}
 .nav__logo,
 .nav__toggle {
     color: var(--title-color);
+
     font-weight: var(--font-medium);
 }
 
