--- a/public/assets/site/css/styles.css
+++ b/public/assets/site/css/styles.css
@@ -1047,7 +1047,7 @@ img {
 .footer__copy {
     font-size: var(--smaller-font-size);
     text-align: center;
-    color: var(--text-color);
+    color: var(--title-color);
     margin-top: var(--mb-3);
 }
 
